# Funcoes_Python

./: README.md  loogin_ex_erro.py  pyproject.toml
